   - Entry page: display the settlement group (todo #1429).
   - Entry properties: align counters, add tiers (todo #1426).
   - Export the FEC file (LPF - Article A47 A-1).
   - Integrity check: have a user preference to only display errors (todo #1409).
   - LedgerBookSummary: is now merged with LedgerBookRender (todo #1386).
   - Operation group: display entries of an operation (todo #1422).
   - Operation template: define new DOMYP macro.
   - Period closing: improve accounts archive message.
   - Printings: allow the user to re-render as often as he wishes (todo #1384).
   - Printings: have a progress bar when printing (todo #1404).
   - Printings: have a plugin which can override ofaIRenderable interface (todo #1196).
   - Reconciliation group: display more columns (todo #1433).
   - Reconciliation group: let display entries and BAT files (todo #1434).
   - Reconciliation page: auto-updates when an external identifier changes (todo #1407).
   - Reconciliation page: have all entry/batlines related actions (todo #1428).
   - Reconciliation render take into account the last available BAT at date (todo #1420).
   - Recurrent operations validation: have a visual display of the status (todo #1369).
   - Restore assistant: allow admin credentials to be saved (todo #1416).
   - Settlement page: have all entry related actions (todo #1431).
   - Unreconciliated page: have all account/entry related actions.
   - Unsettled page: have all account/entry related actions.
   - VAT records: may now display the generated operations (todo #1296).
   - VAT records: are automatically validated on period/exercice close (todo #1435).
   - VAT records: cannot anymore be validated from the properties, but only from the page.
   - VAT records: let the accounting entries to be deleted.

 Bug fixes:

   - Exercice closing: forward operation number are generated in the new exercice.
   - Exercice closing: rightly store last closing date and last entry number.